refactor: rewrite workspace switcher (#1267)
Signed-off-by: leo <longshuang@msn.cn>

--- a/src/Views/Launcher.axaml
+++ b/src/Views/Launcher.axaml
@@ -72,7 +72,7 @@
         <Path Width="12" Height="12" Data="{StaticResource Icons.Menu}"/>
       </Button>
 
-      <!-- Workspace Switcher -->
+      <!-- Workspace Dropdown Menu -->
       <Button Grid.Column="1" Classes="icon_button" VerticalAlignment="Bottom" Margin="0,0,0,1" Click="OnOpenWorkspaceMenu">
         <ToolTip.Tip>
           <StackPanel Orientation="Horizontal">
@@ -85,10 +85,10 @@
               Fill="{Binding ActiveWorkspace.Brush}"/>
       </Button>
 
-      <!-- Pages Tabs-->
+      <!-- Pages Tabs -->
       <v:LauncherTabBar Grid.Column="2" Height="30" Margin="0,0,16,0" VerticalAlignment="Bottom"/>
 
-      <!-- Caption Buttons (Windows/Linux)-->
+      <!-- Caption Buttons (Windows/Linux) -->
       <Border Grid.Column="3" Margin="16,0,0,0" IsVisible="{Binding #ThisControl.HasRightCaptionButton}">
         <v:CaptionButtons Height="30" VerticalAlignment="Top"/>
       </Border>
@@ -102,5 +102,22 @@
         </DataTemplate>
       </ContentControl.DataTemplates>
     </ContentControl>
+    
+    <!-- Workspace Switcher -->
+    <Border Grid.Row="1"
+            Background="Transparent"
+            IsVisible="{Binding WorkspaceSwitcher, Converter={x:Static ObjectConverters.IsNotNull}}">
+      <Border HorizontalAlignment="Center" VerticalAlignment="Center" Effect="drop-shadow(0 0 12 #A0000000)">
+        <Border Background="{DynamicResource Brush.Popup}" CornerRadius="8">
+          <ContentControl Margin="16" Content="{Binding WorkspaceSwitcher}">
+            <ContentControl.DataTemplates>
+              <DataTemplate DataType="vm:WorkspaceSwitcher">
+                <v:WorkspaceSwitcher/>
+              </DataTemplate>
+            </ContentControl.DataTemplates>
+          </ContentControl>
+        </Border>
+      </Border>
+    </Border>
   </Grid>
 </v:ChromelessWindow>
