--- a/src/Views/LauncherPageSwitcher.axaml
+++ b/src/Views/LauncherPageSwitcher.axaml
@@ -3,19 +3,27 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="using:SourceGit.ViewModels"
+             xmlns:v="using:SourceGit.Views"
              xmlns:c="using:SourceGit.Converters"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="SourceGit.Views.LauncherTabsSelector"
-             x:Name="ThisControl">
-  <Grid RowDefinitions="28,Auto">
-    <TextBox Grid.Row="0"
+             x:Class="SourceGit.Views.LauncherPageSwitcher"
+             x:DataType="vm:LauncherPageSwitcher">
+  <Grid RowDefinitions="28,Auto,Auto">
+    <TextBlock Grid.Row="0"
+               Text="{DynamicResource Text.Launcher.SwitchTab}"
+               FontWeight="Bold"
+               HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    
+    <TextBox Grid.Row="1"
              Height="24"
              Margin="4,0"
              BorderThickness="1"
              CornerRadius="12"
-             Text="{Binding #ThisControl.SearchFilter, Mode=TwoWay}"
+             Text="{Binding SearchFilter, Mode=TwoWay}"
+             KeyDown="OnSearchBoxKeyDown"
              BorderBrush="{DynamicResource Brush.Border2}"
-             VerticalContentAlignment="Center">
+             VerticalContentAlignment="Center"
+             v:AutoFocusBehaviour.IsEnabled="True">
       <TextBox.InnerLeftContent>
         <Path Width="14" Height="14"
               Margin="6,0,0,0"
@@ -27,8 +35,8 @@
         <Button Classes="icon_button"
                 Width="16"
                 Margin="0,0,6,0"
-                Click="OnClearSearchFilter"
-                IsVisible="{Binding #ThisControl.SearchFilter, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"
+                Command="{Binding ClearFilter}"
+                IsVisible="{Binding SearchFilter, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"
                 HorizontalAlignment="Right">
           <Path Width="14" Height="14"
                 Margin="0,1,0,0"
@@ -38,19 +46,22 @@
       </TextBox.InnerRightContent>
     </TextBox>
 
-    <ListBox Grid.Row="1"
-             Width="200"
+    <ListBox Grid.Row="2"
+             x:Name="PagesListBox"
+             Width="300"
              MaxHeight="400"
-             Margin="0,4,0,0"
-             Background="Transparent"
+             Margin="0,8,0,0"
+             BorderThickness="0"
              SelectionMode="Single"
+             Background="Transparent"
+             Focusable="True"
              ScrollViewer.HorizontalScrollBarVisibility="Disabled"
              ScrollViewer.VerticalScrollBarVisibility="Auto"
-             ItemsSource="{Binding #ThisControl.VisiblePages}"
-             SelectionChanged="OnPageSelectionChanged">
+             ItemsSource="{Binding VisiblePages, Mode=OneWay}"
+             SelectedItem="{Binding SelectedPage, Mode=TwoWay}">
       <ListBox.Styles>
         <Style Selector="ListBoxItem">
-          <Setter Property="Padding" Value="0"/>
+          <Setter Property="Padding" Value="8,0"/>
           <Setter Property="MinHeight" Value="26"/>
           <Setter Property="CornerRadius" Value="4"/>
         </Style>
@@ -72,30 +83,28 @@
 
       <ListBox.ItemTemplate>
         <DataTemplate DataType="vm:LauncherPage">
-          <Grid ColumnDefinitions="Auto,*" VerticalAlignment="Center">
+          <Grid ColumnDefinitions="Auto,6,*" Background="Transparent" DoubleTapped="OnItemDoubleTapped">
             <Path Grid.Column="0"
-                  Width="12" Height="12" Margin="12,0"
+                  Width="12" Height="12"
                   Fill="{Binding Node.Bookmark, Converter={x:Static c:IntConverters.ToBookmarkBrush}}"
                   Data="{StaticResource Icons.Bookmark}"
                   IsVisible="{Binding Node.IsRepository}"
                   IsHitTestVisible="False"/>
             <Path Grid.Column="0"
-                  Width="12" Height="12" Margin="12,0"
+                  Width="12" Height="12"
                   Fill="{DynamicResource Brush.FG1}"
                   Data="{StaticResource Icons.Repositories}"
                   IsVisible="{Binding !Node.IsRepository}"
                   IsHitTestVisible="False"/>
-            <TextBlock Grid.Column="1"
+            <TextBlock Grid.Column="2"
                        Classes="primary"
                        VerticalAlignment="Center"
-                       FontSize="{Binding Source={x:Static vm:Preferences.Instance}, Path=DefaultFontSize, Converter={x:Static c:DoubleConverters.Decrease}}"
                        Text="{Binding Node.Name}"
                        IsVisible="{Binding Node.IsRepository}"
                        IsHitTestVisible="False"/>
-            <TextBlock Grid.Column="1"
+            <TextBlock Grid.Column="2"
                        Classes="primary"
                        VerticalAlignment="Center"
-                       FontSize="{Binding Source={x:Static vm:Preferences.Instance}, Path=DefaultFontSize, Converter={x:Static c:DoubleConverters.Decrease}}"
                        Text="{DynamicResource Text.PageTabBar.Welcome.Title}"
                        IsVisible="{Binding !Node.IsRepository}"
                        IsHitTestVisible="False"/>
