--- a/src/Views/Launcher.axaml
+++ b/src/Views/Launcher.axaml
@@ -103,13 +103,13 @@
       </ContentControl.DataTemplates>
     </ContentControl>
     
-    <!-- Workspace Switcher -->
+    <!-- Workspace/Pages Switcher -->
     <Border Grid.Row="1"
             Background="Transparent"
             IsVisible="{Binding Switcher, Converter={x:Static ObjectConverters.IsNotNull}}">
       <Border HorizontalAlignment="Center" VerticalAlignment="Center" Effect="drop-shadow(0 0 12 #A0000000)">
         <Border Background="{DynamicResource Brush.Popup}" CornerRadius="8">
-          <ContentControl Margin="16" Content="{Binding Switcher}">
+          <ContentControl Margin="16,10,16,12" Content="{Binding Switcher}">
             <ContentControl.DataTemplates>
               <DataTemplate DataType="vm:WorkspaceSwitcher">
                 <v:WorkspaceSwitcher/>
