--- a/src/Views/LauncherPageSwitcher.axaml
+++ b/src/Views/LauncherPageSwitcher.axaml
@@ -8,15 +8,15 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="SourceGit.Views.LauncherPageSwitcher"
              x:DataType="vm:LauncherPageSwitcher">
-  <Grid RowDefinitions="28,Auto,Auto">
+  <Grid RowDefinitions="Auto,Auto,Auto">
     <TextBlock Grid.Row="0"
-               Text="{DynamicResource Text.Launcher.SwitchTab}"
+               Text="{DynamicResource Text.Launcher.Pages}"
                FontWeight="Bold"
-               HorizontalAlignment="Center" VerticalAlignment="Top"/>
+               HorizontalAlignment="Center"/>
     
     <TextBox Grid.Row="1"
              Height="24"
-             Margin="4,0"
+             Margin="4,8,4,0"
              BorderThickness="1"
              CornerRadius="12"
              Text="{Binding SearchFilter, Mode=TwoWay}"
@@ -50,7 +50,7 @@
              x:Name="PagesListBox"
              Width="300"
              MaxHeight="400"
-             Margin="0,8,0,0"
+             Margin="4,8,4,0"
              BorderThickness="0"
              SelectionMode="Single"
              Background="Transparent"
